# bluprint-demo

./: .gitignore  README.md  pyproject.toml
bluprint_demo/: common_code.py
conf/: data.yaml
data/: user_processed.csv
data/emailed/: messy.xlsx
notebooks/: final_report.Rmd  final_report.ipynb
notebooks/pre/: process.Rmd  process.html  process.ipynb
