[project]
name = "bluprint-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "igor-sb", email = "84479009+igor-sb@users.noreply.github.com"},
]
dependencies = [
    "bluprint-conf>=0.1.0",
    "pandas>=2.1.4",
    "ipykernel>=6.27.1",
    "openpyxl>=3.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["conf", "data", "bluprint-demo"]
